[package]
name = "percolator-nft"
version = "0.1.0"
edition = "2021"
description = "Position NFT wrapper for Percolator — mint transferable NFTs representing open perpetual positions"

[features]
no-entrypoint = []
test = []
kani = []

[dependencies]
solana-program = "=2.2.1"
# pinocchio-token provides AccountState enum (SPL Token state discriminants, same layout).
# We use it for token account state validation without pulling in the full spl-token crate.
# Token-2022 instructions are built manually (no spl-token-2022 dep — avoids solana 2.1 conflict).
pinocchio-token = "0.5.0"
bytemuck = { version = "1.14", features = ["derive"] }

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(kani)'] }

[lib]
crate-type = ["cdylib", "lib"]

[dev-dependencies]
solana-sdk = "=2.2.1"
proptest = "1.4"
