[package]
name = "percolator-nft"
version = "0.1.0"
edition = "2021"
description = "Position NFT wrapper for Percolator — mint transferable NFTs representing open perpetual positions"

[features]
no-entrypoint = []
test = []
kani = []
# PERC-9066: Slab capacity tiers — MUST mirror percolator/Cargo.toml exactly
# so the vendored RiskEngine in src/slab_types.rs matches the deployed
# Percolator program's byte layout. Pick the feature matching the deployed
# mainnet Percolator build (default = 4096 accounts, medium = 1024, etc).
small = []
medium = []

[dependencies]
solana-program = "=2.2.1"
# pinocchio-token provides AccountState enum (SPL Token state discriminants, same layout).
# We use it for token account state validation without pulling in the full spl-token crate.
# Token-2022 instructions are built manually (no spl-token-2022 dep — avoids solana 2.1 conflict).
pinocchio-token = "0.5.0"
bytemuck = { version = "1.14", features = ["derive"] }

# Pin blake3/constant_time_eq to avoid edition2024 (SBF platform-tools has Rust 1.84)
[dependencies.blake3]
version = ">=1.5.0, <1.8.0"

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(kani)'] }

[patch.crates-io]
blake3 = { git = "https://github.com/BLAKE3-team/BLAKE3", tag = "1.5.5" }

[lib]
crate-type = ["cdylib", "lib"]

[dev-dependencies]
solana-sdk = "=2.2.1"
proptest = "1.4"
